--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-router/node": "^7.7.0",
     "@react-router/serve": "^7.7.0",
+    "@types/swagger-ui-react": "^5.18.0",
     "axios": "^1.10.0",
     "dotenv": "^17.2.0",
     "isbot": "^5.1.27",
@@ -18,7 +19,9 @@
     "node-cache": "^5.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.0"
+    "react-router": "^7.7.0",
+    "swagger-ui-dist": "^5.27.0",
+    "swagger-ui-react": "^5.27.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.0",
