--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,12 @@
 # hosted url
-adapterbaseurl="https://api.example.com"
-
+adapterbaseurl="http://localhost:5173/"
+VITE_ENV=stage
+MOCK_JWT_SECRET=
+PSP_CODE=
+JWT_PUBLIC_KEY_CACHE_MINUTES=15
+DIGITAL_PAYMENTS_UAA_URL=https://digitalpayments.authentication.eu10.hana.ondemand.com
+EXTERNAL_ADAPTER_UAA_URL=https://sapdigitaldemo-iuvoze3d.authentication.eu10.hana.ondemand.com
+TENANT_ID=
+DIGITAL_PAYMENTS_ADAPTER_TO_CORE_TOKEN_URL=
+ADAPTER_TO_CORE_CLIENT_ID=
+ADAPTER_TO_CORE_CLIENT_PASSWORD=
